<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bouquets"
        android:icon="@drawable/ic_list"
        android:title="@string/bouquets" />
    <item
        android:id="@+id/nav_devices"
        android:icon="@drawable/ic_tv"
        android:title="@string/devices" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/about" />

</menu>
